--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ name = "lazymail"
 version = "0.0.0"
 authors = ["Johnson Hu <huwqchn@gmail.com>"]
 description = "Terminal Email Client"
+homepage = "https://github.com/huwqchn/lazymail"
+repository = "https://github.com/huwqchn/lazymail"
 license = "LGPL-3.0"
 edition = "2021"
 keywords = ["tui-rs", "terminal", "mutt", "email"]
